--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -42,17 +42,22 @@
     font-size: 2em;
 }
 
+p {
+    font-size: 1.5rem;
+}
+
   /* buttons */
 
 .next-button {
     background-color: var(--button-green);
     border-radius: 2rem;
     border: none;
-    font-size: 1rem;
+    font-size: 1.3rem;
     color: var(--background-white);
     font-weight: 700;
-    width: 10rem;
-    height: 2rem;
+    width: 12rem;
+    height: 2.5rem;
+    margin: 0 4rem 0 4rem;
 }
 
 .next-button:hover {
