--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -5,7 +5,8 @@
 
     --main-black: #000;
     --background-white: #FFF;
-    --button-green: #3EB25E;
+    --focus-green: #3EB25E;
+    --unfocus-green: #3db05e4d;
     --hover-color: #FFFF7D;
   }
 
@@ -14,7 +15,7 @@
 .views {
     display: inline-flex;
     padding: 3.2rem 5.25rem 3rem 13rem;
-    justify-content: flex-end;
+    /* justify-content: flex-end; */
     align-items: center;
     gap: 5rem;
     background: var(--background-white)
@@ -25,10 +26,11 @@
   /* titles, paragraphs and text in general */ 
 
 .forms {
+
     display: inline-block;
     color: var(--main-black);
     text-align: center;
-    padding: 0rem 1rem 2rem 2rem;
+    padding: 0 0 2rem 2rem;
 }
 .title1 { 
     font-size: 7rem;
@@ -37,7 +39,7 @@
 }
 
 .title2 {
-    margin-top: 0rem;
+    text-align: left;
 }
 
 .subtitle {
@@ -45,7 +47,10 @@
 }
 
 p {
-    font-size: 1.5rem;
+    font-size: 1.7rem;
+    width: 50%;
+    margin-left: 7em;
+    
 }
 
   /* buttons */
@@ -59,7 +64,7 @@ p {
     font-weight: 700;
     width: 12rem;
     height: 2.5rem;
-    margin: 0 4rem 0 4rem;
+    margin: 2rem 4rem 0 4rem;
 }
 
 .next-button:hover {
@@ -83,13 +88,41 @@ p {
     width: auto;
     height: 2.5em;
     font-size: 1.5em;
-    background: white;
+    background: var(--background-white);
     padding: 0 6% 0 10%;
     cursor: pointer;
 }
 
 #accstat:hover {
     border: 1px solid var(--main-black);
+}
+
+.marketSelect {
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
+    color: var(--main-black);
+    font-size: 1.3em;
+    
+}
+
+.radio-wrap {
+    display: flex;
+    flex-direction: row;
+    padding: 0.4em;
+    justify-content: baseline;
+    
+}
+
+input[type='radio'] {
+    width: 22px;
+    height: 22px;
+    appearance: unset;
+    background-color: var(--unfocus-green);
+}
+
+input[type='radio']:checked {
+    background-color: var(--focus-green);
 }
 
 /* dropdown arrow */
