--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -84,7 +84,7 @@ p {
     align-items: center;
 }
 
-#accstat {
+.selectForm {
     display: flex;
     appearance: none;
     border-radius: 1.25em;
@@ -97,11 +97,11 @@ p {
     cursor: pointer;
 }
 
-#accstat:hover {
+.selectForm:hover {
     border: 1px solid var(--main-black);
 }
 
-.marketSelect {
+.check {
     display: flex;
     flex-direction: column;
     align-items: baseline;
@@ -110,7 +110,7 @@ p {
     
 }
 
-.radio-wrap {
+.flex-aligning {
     display: flex;
     flex-direction: row;
     padding: 0.4em;
@@ -118,7 +118,7 @@ p {
     
 }
 
-input[type='radio'] {
+input[type='radio'],[type='checkbox'] {
     width: 22px;
     height: 22px;
     appearance: unset;
@@ -126,7 +126,7 @@ input[type='radio'] {
     background-color: var(--unfocus-green);
 }
 
-input[type='radio']:checked {
+input[type='radio']:checked,[type='checkbox']:checked {
     background-color: var(--focus-green);
 }
 
