--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -149,3 +149,9 @@ input[type='radio']:checked,[type='checkbox']:checked {
     transform: rotate(-90deg);
     transition: 0.3s ease-in-out;
 }
+
+/* textarea */
+
+#investment-history {
+    border-radius: 25%;
+}
