--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -8,6 +8,7 @@
     --focus-green: #3EB25E;
     --unfocus-green: #3db05e4d;
     --hover-color: #FFFF7D;
+    --border-white: #d7c7c7;
   }
 
   /* main pages styles */
@@ -50,7 +51,6 @@ p {
     font-size: 1.7rem;
     width: 50%;
     margin-left: 7em;
-    
 }
 
   /* buttons */
@@ -88,7 +88,7 @@ p {
     display: flex;
     appearance: none;
     border-radius: 1.25em;
-    border: 0.5px solid #d7c7c7;
+    border: 0.5px solid var(--border-white);
     width: auto;
     height: 2.5em;
     font-size: 1.5em;
@@ -153,5 +153,36 @@ input[type='radio']:checked,[type='checkbox']:checked {
 /* textarea */
 
 #investment-history {
-    border-radius: 25%;
+    border: 0.5px solid var(--border-white);
+    border-radius: 7%;
+    width: 60%;
+}
+
+/* box inputs */
+
+.inputBox {
+    border-radius: 1.25em;
+    border: 0.5px solid var(--border-white);
+    width: 80%;
+    height: 2.5em;
+    font-size: 1.5em;
+    padding: 0 6% 0 10%;
+    margin: 1.5em -1em 1em 0;
+}
+
+.inputBox:focus {
+    border: 1px solid var(--main-black);
+}
+
+.inputBoxLabel {
+    font-size: 2em;
+    font-weight: 700;
+    line-height: normal;
+    justify-content: left;
+    align-items: baseline;
+}
+
+.forms #age {
+    width: auto;
+    align-items: baseline;
 }
