--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -198,7 +198,7 @@ input[type='radio']:checked,[type='checkbox']:checked {
         
     }
     img {
-        width: 60%;
+        width: 100%;
         height: 20rem;
     }
 
@@ -208,12 +208,24 @@ input[type='radio']:checked,[type='checkbox']:checked {
 
     .title1 {
         font-size: 9vw;
-        margin-left: 4rem;
+        text-align: center;
     }
 
     .title2 {
-        font-size: 3vw;
-        margin-left: 3rem;
+        font-size: 5vw;
+        margin: 1rem;
+    }
+
+    .subtitle {
+        font-size: 1.5em;
+        text-align: center;
+    }
+
+    p {
+        font-size: 1rem;
+        width: 100%;
+        margin: 0;
+        text-align: center;
     }
 
     .next-button {
@@ -222,11 +234,53 @@ input[type='radio']:checked,[type='checkbox']:checked {
     }
 
     .skip-button {
-        width: 45%;
-        margin-left: 0;
+        width: 90%;
+        margin-left: 0.5rem;
         margin-right: 25%;
     }
 
+    .inputBox {
+        width: 100%;
+    }
+    
+    .container {
+        width: 50%;
+        font-size: 3vw;
+    }
+
+
+    .dd-arrow {
+        border-left: 2vw solid transparent;
+        border-right: 2vw solid transparent;
+        border-top: 2vh solid #3db05e4d;
+        margin-left: 1em ;
+    }
+
+    .selectForm {
+        padding: 0 1% 0 17%;
+    }
+
+    .check {
+        font-size: 5vw;
+    }
+
+    .inputBoxLabel {
+        font-size: 7vw;
+    }
+
+    .inputBox {
+        width: 70%;
+        height: 2.2em;
+        font-size: 1em;
+        padding: 0 6% 0 10%;
+        margin: 1.5em 1em 1em 0;
+    }
+
+    .ageInput {
+        width: 20%;
+        margin-right: 8em
+    }
+    
 }
 
 @media (max-width: 320px) {
@@ -246,5 +300,15 @@ input[type='radio']:checked,[type='checkbox']:checked {
         width: 30%;
         margin-left: 0;
         margin-right: 35%;
+    }
+
+    .title2 {
+        padding: 0 5em 0 0;
+        margin-right: 0.5em;
+    }
+
+    input[type='radio'],[type='checkbox'] {
+        width: 15px;
+        height: 15px;
     }
 }
